--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,5 +7,5 @@
   }
 
   .aboutMe{
-    background-image: url('../../public/genesisColored.svg');
+    background-image: url('../../public/genesisColored.svg')
   }
